// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home.vue renders props.msg 1`] = `
<span>
  Loading...
</span>
`;

exports[`Home.vue renders props.msg 2`] = `
<div
  class="hello"
>
  <pre>
    function mockConstructor() {
        return fn.apply(this, arguments);
      }
  </pre>
  <h1>
    new message
  </h1>
  <p>
     For a guide and recipes on how to configure / customize this project,
    <br />
     check out the 
    <a
      href="https://cli.vuejs.org"
      rel="noopener"
      target="_blank"
    >
      vue-cli documentation
    </a>
    . 
  </p>
  <h3>
    Installed CLI Plugins
  </h3>
  <ul>
    <li>
      <a
        href="https://github.com/vuejs/vue-cli/tree/dev/packages/%40vue/cli-plugin-babel"
        rel="noopener"
        target="_blank"
      >
        babel
      </a>
    </li>
    <li>
      <a
        href="https://github.com/vuejs/vue-cli/tree/dev/packages/%40vue/cli-plugin-router"
        rel="noopener"
        target="_blank"
      >
        router
      </a>
    </li>
    <li>
      <a
        href="https://github.com/vuejs/vue-cli/tree/dev/packages/%40vue/cli-plugin-unit-jest"
        rel="noopener"
        target="_blank"
      >
        unit-jest
      </a>
    </li>
  </ul>
  <h3>
    Essential Links
  </h3>
  <ul>
    <li>
      <a
        href="https://vuejs.org"
        rel="noopener"
        target="_blank"
      >
        Core Docs
      </a>
    </li>
    <li>
      <a
        href="https://forum.vuejs.org"
        rel="noopener"
        target="_blank"
      >
        Forum
      </a>
    </li>
    <li>
      <a
        href="https://chat.vuejs.org"
        rel="noopener"
        target="_blank"
      >
        Community Chat
      </a>
    </li>
    <li>
      <a
        href="https://twitter.com/vuejs"
        rel="noopener"
        target="_blank"
      >
        Twitter
      </a>
    </li>
    <li>
      <a
        href="https://news.vuejs.org"
        rel="noopener"
        target="_blank"
      >
        News
      </a>
    </li>
  </ul>
  <h3>
    Ecosystem
  </h3>
  <ul>
    <li>
      <a
        href="https://router.vuejs.org"
        rel="noopener"
        target="_blank"
      >
        vue-router
      </a>
    </li>
    <li>
      <a
        href="https://vuex.vuejs.org"
        rel="noopener"
        target="_blank"
      >
        vuex
      </a>
    </li>
    <li>
      <a
        href="https://github.com/vuejs/vue-devtools#vue-devtools"
        rel="noopener"
        target="_blank"
      >
        vue-devtools
      </a>
    </li>
    <li>
      <a
        href="https://vue-loader.vuejs.org"
        rel="noopener"
        target="_blank"
      >
        vue-loader
      </a>
    </li>
    <li>
      <a
        href="https://github.com/vuejs/awesome-vue"
        rel="noopener"
        target="_blank"
      >
        awesome-vue
      </a>
    </li>
  </ul>
</div>
`;

exports[`Home.vue renders props.msg and stubs out all other components 1`] = `
<span>
  Loading...
</span>
`;

exports[`Home.vue renders props.msg and stubs out all other components 2`] = `
<div
  class="hello"
>
  <pre>
    function mockConstructor() {
        return fn.apply(this, arguments);
      }
  </pre>
  <h1>
    new message
  </h1>
  <p>
     For a guide and recipes on how to configure / customize this project,
    <br />
     check out the 
    <a
      href="https://cli.vuejs.org"
      rel="noopener"
      target="_blank"
    >
      vue-cli documentation
    </a>
    . 
  </p>
  <c-l-i-plugins-stub />
  <essential-links-stub />
  <ecosystem-stub />
</div>
`;

exports[`Home.vue renders props.msg with \`mountSuspense\` 1`] = `
<div
  class="hello"
>
  <pre>
    function mockConstructor() {
        return fn.apply(this, arguments);
      }
  </pre>
  <h1>
    new message
  </h1>
  <p>
     For a guide and recipes on how to configure / customize this project,
    <br />
     check out the 
    <a
      href="https://cli.vuejs.org"
      rel="noopener"
      target="_blank"
    >
      vue-cli documentation
    </a>
    . 
  </p>
  <h3>
    Installed CLI Plugins
  </h3>
  <ul>
    <li>
      <a
        href="https://github.com/vuejs/vue-cli/tree/dev/packages/%40vue/cli-plugin-babel"
        rel="noopener"
        target="_blank"
      >
        babel
      </a>
    </li>
    <li>
      <a
        href="https://github.com/vuejs/vue-cli/tree/dev/packages/%40vue/cli-plugin-router"
        rel="noopener"
        target="_blank"
      >
        router
      </a>
    </li>
    <li>
      <a
        href="https://github.com/vuejs/vue-cli/tree/dev/packages/%40vue/cli-plugin-unit-jest"
        rel="noopener"
        target="_blank"
      >
        unit-jest
      </a>
    </li>
  </ul>
  <h3>
    Essential Links
  </h3>
  <ul>
    <li>
      <a
        href="https://vuejs.org"
        rel="noopener"
        target="_blank"
      >
        Core Docs
      </a>
    </li>
    <li>
      <a
        href="https://forum.vuejs.org"
        rel="noopener"
        target="_blank"
      >
        Forum
      </a>
    </li>
    <li>
      <a
        href="https://chat.vuejs.org"
        rel="noopener"
        target="_blank"
      >
        Community Chat
      </a>
    </li>
    <li>
      <a
        href="https://twitter.com/vuejs"
        rel="noopener"
        target="_blank"
      >
        Twitter
      </a>
    </li>
    <li>
      <a
        href="https://news.vuejs.org"
        rel="noopener"
        target="_blank"
      >
        News
      </a>
    </li>
  </ul>
  <h3>
    Ecosystem
  </h3>
  <ul>
    <li>
      <a
        href="https://router.vuejs.org"
        rel="noopener"
        target="_blank"
      >
        vue-router
      </a>
    </li>
    <li>
      <a
        href="https://vuex.vuejs.org"
        rel="noopener"
        target="_blank"
      >
        vuex
      </a>
    </li>
    <li>
      <a
        href="https://github.com/vuejs/vue-devtools#vue-devtools"
        rel="noopener"
        target="_blank"
      >
        vue-devtools
      </a>
    </li>
    <li>
      <a
        href="https://vue-loader.vuejs.org"
        rel="noopener"
        target="_blank"
      >
        vue-loader
      </a>
    </li>
    <li>
      <a
        href="https://github.com/vuejs/awesome-vue"
        rel="noopener"
        target="_blank"
      >
        awesome-vue
      </a>
    </li>
  </ul>
</div>
`;

exports[`Home.vue renders props.msg with \`mountSuspense\` and stubs out all other components 1`] = `
<div
  class="hello"
>
  <pre>
    function mockConstructor() {
        return fn.apply(this, arguments);
      }
  </pre>
  <h1>
    new message
  </h1>
  <p>
     For a guide and recipes on how to configure / customize this project,
    <br />
     check out the 
    <a
      href="https://cli.vuejs.org"
      rel="noopener"
      target="_blank"
    >
      vue-cli documentation
    </a>
    . 
  </p>
  <c-l-i-plugins-stub />
  <essential-links-stub />
  <ecosystem-stub />
</div>
`;
